[package]
name = "rs-esp32s3-st7789-demo"
version = "0.1.0"
authors = ["o0olele <o0olele@github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
embedded-graphics = "0.8.1"
display-interface-spi = "0.4"
mipidsi = "0.7.1"

[build-dependencies]
embuild = "0.31.3"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
